fixed photo shrink on mobile on Sprint 3 ... need to fix the overlay on mobile

--- a/src/FilterMenu_Area.css
+++ b/src/FilterMenu_Area.css
@@ -108,6 +108,11 @@
 }
 
 @media only screen and (max-width: 999px) and (min-width: 300px) {
+    #filterAreaText {
+        font-size: 1rem;
+        padding-left: 1%;
+    }
+    
     #filterAreaWindow {
         border: 2px solid #000;
         background-color: #fff2cc;
