--- a/src/MenuFigure.css
+++ b/src/MenuFigure.css
@@ -56,6 +56,7 @@
 
 .filterMenuButtonCaption {
     font-size: .75rem;
+    text-align: center;
 }
 
 .filterMenuButtonImg {
@@ -63,4 +64,36 @@
     max-width: 100px;
     width: 100%;
     height: 100%;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .filterMenuColumn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: 0;
+        padding: 0;
+        flex: 1;
+        width: 0;
+    }
+
+    .filterMenuButtonImg {
+        height: 50px;
+        width: 50px;
+    }
+
+    .filterMenuButton {
+        position: relative;
+    }
+
+    #filterMenuRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+    }
 }
